--- a/LabMob/src/app/home/home.page.html
+++ b/LabMob/src/app/home/home.page.html
@@ -1,12 +1,4 @@
 <ion-app>
-  <ion-menu contentId="main-content">
-    <ion-header>
-      <ion-toolbar color="tertiary">
-        <ion-title>Menu Content</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content class="ion-padding">This is the menu content.</ion-content>
-  </ion-menu>
   <div class="ion-page" id="main-content">
     <ion-header [translucent]="true">
       <ion-toolbar>
@@ -18,8 +10,6 @@
     </ion-header>
 
     <ion-content [fullscreen]="true">
-
-
       <!-- Card per attività -->
       <ion-card>
         <ion-card-header>
@@ -45,8 +35,44 @@
           </ion-button>
         </ion-card-content>
       </ion-card>
+
       <!-- Mappa -->
       <div id="map" style="height: 50%; width: 50%;"></div>
     </ion-content>
+
+    <!-- Barra di navigazione in basso -->
+    <ion-footer>
+      <ion-toolbar>
+        <ion-tabs>
+          <ion-tab-bar slot="bottom">
+
+            <!-- Home -->
+            <ion-tab-button (click)="goToHome()">
+              <ion-icon name="home-outline"></ion-icon>
+              <ion-label>Home</ion-label>
+            </ion-tab-button>
+
+            <!-- Statistic -->
+            <ion-tab-button>
+              <ion-icon name="stats-chart-outline"></ion-icon>
+              <ion-label>Statistiche</ion-label>
+            </ion-tab-button>
+
+            <!-- Calendar -->
+            <ion-tab-button>
+              <ion-icon name="calendar-outline"></ion-icon>
+              <ion-label>Calendario</ion-label>
+            </ion-tab-button>
+
+            <!-- Community -->
+            <ion-tab-button>
+              <ion-icon name="people-outline"></ion-icon>
+              <ion-label>Community</ion-label>
+            </ion-tab-button>
+
+          </ion-tab-bar>
+        </ion-tabs>
+      </ion-toolbar>
+    </ion-footer>
   </div>
 </ion-app>
