Inizializazzione di calendario

--- a/LabMob/src/app/home/home.page.html
+++ b/LabMob/src/app/home/home.page.html
@@ -59,7 +59,7 @@
             </ion-tab-button>
 
             <!-- Calendar -->
-            <ion-tab-button>
+            <ion-tab-button (click)="goToCalendar()">
               <ion-icon name="calendar-outline"></ion-icon>
               <ion-label>Calendario</ion-label>
             </ion-tab-button>
