--- a/LabMob/src/app/statistics/statistics.page.html
+++ b/LabMob/src/app/statistics/statistics.page.html
@@ -2,20 +2,21 @@
   <div class="ion-page" id="main-content">
 <ion-header>
   <ion-toolbar>
-    <ion-title>Calendario</ion-title>
+    <ion-title>Statistiche</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <!-- Insert calendar logic here -->
+  <!-- Sezione per le statistiche -->
   <div>
     <ion-card>
       <ion-card-header>
-        <ion-card-title>Calendario Attività</ion-card-title>
+        <ion-card-title>Statistiche delle Attività</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <!-- Add your calendar component or activity list -->
-        <p>Qui verrà visualizzato il calendario delle attività.</p>
+        <!-- Qui verranno visualizzate le statistiche -->
+        <p>Visualizzazione delle statistiche delle attività.</p>
+        <!-- Puoi inserire qui grafici come pie chart o line chart -->
       </ion-card-content>
     </ion-card>
   </div>
