--- a/LabMob/src/app/home/home.page.html
+++ b/LabMob/src/app/home/home.page.html
@@ -10,14 +10,26 @@
     </ion-header>
 
     <ion-content [fullscreen]="true">
-      <!-- Card per attività -->
+      <!-- Se un'attività è avviata, mostra il riquadro -->
+      <ion-card *ngIf="isActivityStarted">
+        <ion-card-header>
+          <ion-card-title>Attività in corso: {{ currentActivity.type }}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <p>Km: {{ currentActivity.distance }}</p>
+          <p>Kcalorie: {{ currentActivity.calories }}</p>
+          <p>Tempo: {{ currentActivity.time | date:'shortTime' }}</p>
+          <p>Data: {{ currentActivity.time | date:'shortDate' }}</p>
+        </ion-card-content>
+      </ion-card>
+
+      <!-- Pulsanti per attività -->
       <ion-card>
         <ion-card-header>
           <ion-card-title>Attività</ion-card-title>
         </ion-card-header>
 
         <ion-card-content>
-          <!-- Pulsanti per attività -->
           <ion-button expand="block" color="success" (click)="startActivity('walking')">
             Inizia a camminare
           </ion-button>
@@ -30,7 +42,8 @@
             Inizia a stare seduto
           </ion-button>
 
-          <ion-button expand="block" color="danger" (click)="stopActivity()">
+          <!-- Il pulsante "Ferma l'attività" appare solo se un'attività è avviata -->
+          <ion-button expand="block" color="danger" *ngIf="isActivityStarted" (click)="stopActivity()">
             Ferma l'attività
           </ion-button>
         </ion-card-content>
@@ -45,34 +58,29 @@
       <ion-toolbar>
         <ion-tabs>
           <ion-tab-bar slot="bottom">
-
-            <!-- Home -->
             <ion-tab-button (click)="goToHome()">
               <ion-icon name="home-outline"></ion-icon>
               <ion-label>Home</ion-label>
             </ion-tab-button>
 
-            <!-- Statistiche -->
             <ion-tab-button (click)="goToStatistics()">
               <ion-icon name="stats-chart-outline"></ion-icon>
               <ion-label>Statistiche</ion-label>
             </ion-tab-button>
 
-            <!-- Calendar -->
             <ion-tab-button (click)="goToCalendar()">
               <ion-icon name="calendar-outline"></ion-icon>
               <ion-label>Calendario</ion-label>
             </ion-tab-button>
 
-            <!-- Community -->
             <ion-tab-button (click)="goToCommunity()">
               <ion-icon name="people-outline"></ion-icon>
               <ion-label>Community</ion-label>
             </ion-tab-button>
-
           </ion-tab-bar>
         </ion-tabs>
       </ion-toolbar>
     </ion-footer>
   </div>
 </ion-app>
+
