--- a/LabMob/src/app/home/home.page.html
+++ b/LabMob/src/app/home/home.page.html
@@ -23,8 +23,8 @@
         </ion-card-content>
       </ion-card>
 
-      <!-- Pulsanti per attività -->
-      <ion-card>
+      <!-- Se l'attività NON è avviata, mostra i pulsanti per avviarla -->
+      <ion-card *ngIf="!isActivityStarted">
         <ion-card-header>
           <ion-card-title>Attività</ion-card-title>
         </ion-card-header>
@@ -41,9 +41,13 @@
           <ion-button expand="block" color="warning" (click)="startActivity('sitting')">
             Inizia a stare seduto
           </ion-button>
+        </ion-card-content>
+      </ion-card>
 
-          <!-- Il pulsante "Ferma l'attività" appare solo se un'attività è avviata -->
-          <ion-button expand="block" color="danger" *ngIf="isActivityStarted" (click)="stopActivity()">
+      <!-- Il pulsante "Ferma l'attività" appare solo se un'attività è avviata -->
+      <ion-card *ngIf="isActivityStarted">
+        <ion-card-content>
+          <ion-button expand="block" color="danger" (click)="stopActivity()">
             Ferma l'attività
           </ion-button>
         </ion-card-content>
@@ -83,3 +87,4 @@
     </ion-footer>
   </div>
 </ion-app>
+
