--- a/LabMob/src/app/community/community.page.html
+++ b/LabMob/src/app/community/community.page.html
@@ -1,76 +1,83 @@
 <ion-app>
+  <ion-menu side="start" menuId="first" content-id="main-content" type="overlay" class="custom-menu">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Sideboard</ion-title>
+      </ion-toolbar>
+    </ion-header>
+
+    <ion-content>
+      <ion-list>
+        <ion-item>
+          <ion-icon name="person-outline" slot="start"></ion-icon>
+          <ion-label>Utente</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="list-circle-outline" slot="start"></ion-icon>
+          <ion-label>Lista Utenti</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="cloud-upload-outline" slot="start"></ion-icon>
+          <ion-label>Upload</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
   <div class="ion-page" id="main-content">
     <ion-header>
       <ion-toolbar>
-        <ion-title slot="start">Community</ion-title>  <!-- Titolo a sinistra -->
-        <!-- Bottone per il logout, visibile solo se l'utente è loggato -->
-        <ion-button slot="end" id="lout" *ngIf="user" (click)="logout()">Logout</ion-button>  <!-- Bottone a destra -->
+        <ion-buttons slot="start">
+          <ion-menu-button auto-hide="false"></ion-menu-button> <!-- Bottone per aprire il menu -->
+        </ion-buttons>
+        <ion-title slot="start">Community</ion-title>
+        <ion-button slot="end" id="lout" *ngIf="user" (click)="logout()">Logout</ion-button>
       </ion-toolbar>
     </ion-header>
 
     <ion-content>
       <div>
         <ion-card>
-
           <ion-card-content>
-            <p>{{ loginMessage }}</p>  <!-- Mostra il messaggio di login -->
-
-            <!-- Bottone per il login con Google, visibile solo se l'utente non è loggato -->
+            <p>{{ loginMessage }}</p>
             <ion-button *ngIf="!user" (click)="loginWithGoogle()">Login con Google</ion-button>
-
-            <!-- Campi per il login tramite email e password -->
             <div *ngIf="!user">
               <ion-item>
                 <ion-label position="floating">Email</ion-label>
                 <ion-input [(ngModel)]="email" type="email"></ion-input>
               </ion-item>
-
               <ion-item>
                 <ion-label position="floating">Password</ion-label>
                 <ion-input [(ngModel)]="password" type="password"></ion-input>
               </ion-item>
-
               <ion-button expand="block" (click)="loginWithEmail()">Login con Email</ion-button>
               <ion-button expand="block" (click)="registerWithEmail()">Registrati con Email</ion-button>
             </div>
-
-
-
           </ion-card-content>
         </ion-card>
       </div>
     </ion-content>
 
-    <!-- Barra di navigazione in basso -->
     <ion-footer>
       <ion-toolbar>
         <ion-tabs>
           <ion-tab-bar slot="bottom">
-
-            <!-- Home -->
             <ion-tab-button (click)="goToHome()">
               <ion-icon name="home-outline"></ion-icon>
               <ion-label>Home</ion-label>
             </ion-tab-button>
-
-            <!-- Statistiche -->
             <ion-tab-button (click)="goToStatistics()">
               <ion-icon name="stats-chart-outline"></ion-icon>
               <ion-label>Statistiche</ion-label>
             </ion-tab-button>
-
-            <!-- Calendar -->
             <ion-tab-button (click)="goToCalendar()">
               <ion-icon name="calendar-outline"></ion-icon>
               <ion-label>Calendario</ion-label>
             </ion-tab-button>
-
-            <!-- Community -->
             <ion-tab-button (click)="goToCommunity()">
               <ion-icon name="people-outline"></ion-icon>
               <ion-label>Community</ion-label>
             </ion-tab-button>
-
           </ion-tab-bar>
         </ion-tabs>
       </ion-toolbar>
