--- a/LabMob/src/app/community/community.page.html
+++ b/LabMob/src/app/community/community.page.html
@@ -78,8 +78,7 @@
             <ion-list>
               <ion-item *ngFor="let user of userList">
                 <ion-label>
-                  <h3>{{ user.email }}</h3>
-                  <p>UID: {{ user.uid }}</p>
+                  <h3>{{ user.email }}</h3> <!-- Mostra solo l'email -->
                 </ion-label>
               </ion-item>
             </ion-list>
