--- a/LabMob/src/app/calendar/calendar.page.html
+++ b/LabMob/src/app/calendar/calendar.page.html
@@ -1,55 +1,61 @@
 <ion-app>
   <div class="ion-page" id="main-content">
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Calendario</ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Calendario</ion-title>
+      </ion-toolbar>
+    </ion-header>
 
-<ion-content>
-  <!-- Insert calendar logic here -->
-  <div>
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title>Calendario Attività</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <!-- Add your calendar component or activity list -->
-        <p>Qui verrà visualizzato il calendario delle attività.</p>
-      </ion-card-content>
-    </ion-card>
-  </div>
-</ion-content>
+    <ion-content>
+      <div *ngFor="let group of groupedActivities">
+        <!-- Titolo della data -->
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>{{ group.date }}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-list>
+              <ion-item *ngFor="let activity of group.activities">
+                <ion-label>
+                  <h2>{{ activity.type | titlecase }}</h2>
+                  <p>Inizio: {{ activity.startTime | date:'shortTime' }}</p>
+                  <p>Fine: {{ activity.endTime | date:'shortTime' }}</p>
+                  <p>Distanza: {{ activity.distance }} km</p>
+                  <p>Calorie: {{ activity.calories }} Kcal</p>
+                  <p>Durata: {{ activity.duration }}</p>
+                  <p *ngIf="activity.type === 'walking'">Passi: {{ activity.steps }}</p>
+                </ion-label>
+              </ion-item>
+            </ion-list>
+          </ion-card-content>
+        </ion-card>
+      </div>
+    </ion-content>
+
     <!-- Barra di navigazione in basso -->
     <ion-footer>
       <ion-toolbar>
         <ion-tabs>
           <ion-tab-bar slot="bottom">
-
-            <!-- Home -->
             <ion-tab-button (click)="goToHome()">
               <ion-icon name="home-outline"></ion-icon>
               <ion-label>Home</ion-label>
             </ion-tab-button>
 
-            <!-- Statistiche -->
             <ion-tab-button (click)="goToStatistics()">
               <ion-icon name="stats-chart-outline"></ion-icon>
               <ion-label>Statistiche</ion-label>
             </ion-tab-button>
 
-            <!-- Calendar -->
             <ion-tab-button (click)="goToCalendar()">
               <ion-icon name="calendar-outline"></ion-icon>
               <ion-label>Calendario</ion-label>
             </ion-tab-button>
 
-            <!-- Community -->
             <ion-tab-button (click)="goToCommunity()">
               <ion-icon name="people-outline"></ion-icon>
               <ion-label>Community</ion-label>
             </ion-tab-button>
-
           </ion-tab-bar>
         </ion-tabs>
       </ion-toolbar>
