--- a/LabMob/src/app/calendar/calendar.page.html
+++ b/LabMob/src/app/calendar/calendar.page.html
@@ -25,6 +25,13 @@
                   <p>Durata: {{ activity.duration }}</p>
                   <p *ngIf="activity.type === 'walking'">Passi: {{ activity.steps }}</p>
                 </ion-label>
+                <ion-icon
+                  name="close-outline"
+                  color="danger"
+                  (click)="deleteActivity(activity.id)"
+                  slot="end"
+                  style="font-size: 24px; color: red; cursor: pointer;">
+                </ion-icon>
               </ion-item>
             </ion-list>
           </ion-card-content>
