--- a/LabMob/src/app/community/community.page.html
+++ b/LabMob/src/app/community/community.page.html
@@ -122,7 +122,7 @@
             <p>Carica i tuoi file qui!</p>
 
             <!-- Aggiungi il nuovo bottone arancione -->
-            <ion-button color="warning" fill="solid" (click)="onOrangeButtonClick()">
+            <ion-button color="warning" fill="solid" (click)="onUploadButtonClick()">
               <ion-icon name="documents-outline"></ion-icon>
               CARICA ATTIVITA'
             </ion-button>
