--- a/LabMob/src/app/statistics/statistics.page.html
+++ b/LabMob/src/app/statistics/statistics.page.html
@@ -6,8 +6,6 @@
       </ion-toolbar>
     </ion-header>
 
-
-
     <ion-content>
       <div>
         <ion-card>
@@ -16,13 +14,13 @@
           </ion-card-header>
           <ion-card-content>
             <!-- Aggiungi l'ion-select qui -->
-            <ion-item>
+            <ion-item *ngIf="isLoggedIn"> <!-- Mostra solo se l'utente è loggato -->
               <ion-label>Utente</ion-label>
               <ion-select [(ngModel)]="selectedUser">
-                <ion-select-option value="utente">Utente</ion-select-option>
-
+                <ion-select-option value="{{selectedUser}}">{{selectedUser}}</ion-select-option>
               </ion-select>
             </ion-item>
+
             <div style="overflow-x: auto; white-space: nowrap;">
               <button *ngFor="let month of months; let i = index"
                       [ngClass]="{'active': selectedMonth === i}"
@@ -35,8 +33,6 @@
         </ion-card>
       </div>
     </ion-content>
-
-
 
     <ion-footer>
       <ion-toolbar>
