PROVA - GRAFICI FINE?

--- a/LabMob/src/app/statistics/statistics.page.html
+++ b/LabMob/src/app/statistics/statistics.page.html
@@ -30,6 +30,7 @@
               </button>
             </div>
             <canvas id="activityChart"></canvas>
+            <canvas id="stepsKilometersChart"></canvas> <!-- Nuovo grafico a linee -->
           </ion-card-content>
         </ion-card>
       </div>
