PROVA - GRAFICI FINE?

--- a/LabMob/src/app/statistics/statistics.page.html
+++ b/LabMob/src/app/statistics/statistics.page.html
@@ -29,7 +29,7 @@
                 {{ month }}
               </button>
             </div>
-            <canvas id="activityChart"></canvas>
+            <canvas id="activityChart" style="margin-bottom: 50px;"></canvas> <!-- Aggiunto margine inferiore maggiore -->
             <canvas id="stepsKilometersChart"></canvas> <!-- Nuovo grafico a linee -->
           </ion-card-content>
         </ion-card>
