PROVA - GRAFICI Pseudo

--- a/LabMob/src/app/statistics/statistics.page.html
+++ b/LabMob/src/app/statistics/statistics.page.html
@@ -30,7 +30,11 @@
               </button>
             </div>
             <canvas id="activityChart" style="margin-bottom: 50px;"></canvas> <!-- Aggiunto margine inferiore maggiore -->
-            <canvas id="stepsKilometersChart"></canvas> <!-- Nuovo grafico a linee -->
+            <div class="chart-container">
+              <div class="chart-wrapper">
+                <canvas id="stepsKilometersChart"></canvas>
+              </div>
+            </div>
           </ion-card-content>
         </ion-card>
       </div>
