--- a/LabMob/src/app/home/home.page.html
+++ b/LabMob/src/app/home/home.page.html
@@ -103,11 +103,18 @@
 
           <!-- Nuovo pulsante rosso "Mostra Orari" sotto "Setta Orario" -->
           <ion-button color="danger" (click)="showSavedTimes()">Mostra Orari</ion-button>
-          <ion-list *ngIf="savedTimes.length > 0">
+          <ion-list>
             <ion-item *ngFor="let time of savedTimes">
               <ion-label>{{ time }}</ion-label>
+              <ion-icon
+                name="close-outline"
+                color="danger"
+                (click)="removeTime(time)"
+                style="cursor: pointer;">
+              </ion-icon>
             </ion-item>
           </ion-list>
+
         </ion-card-content>
       </ion-card>
 
